<resources>
    <string name="app_name">In&amp;Out</string>
    <string name="actionBar_menu">Menu</string>
    <string name="actionBar_home">Home</string>
    <string name="update_profile_action">Update Profile</string>
    <string name="update_hours_action">Update Hours</string>
    <string name="logout_action">Logout</string>
    <string name="start_hour">Start Hour</string>
    <string name="end_hour">End Hour</string>
    <string name="save">Save</string>
    <string name="welcome_to_in_out_app"><![CDATA[Welcome to In&Out App]]></string>
    <string name="date_column">Day</string>
    <string name="start_hour_column">Start Hour</string>
    <string name="end_hour_column">End Hour</string>
    <string name="send">Send</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_profile">Update Profile</string>
    <string name="left">Left</string>
    <string name="reported">Reported</string>
    <string name="missing_report">Missing Report</string>
    <string name="days_in_month">Days In Month</string>
    <string name="month_report">Month Report</string>
</resources>