<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ReportFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewGraph"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        >
        <TextView
            android:id="@+id/report_TXT_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_report"
            android:textStyle="bold|italic"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2">
        <org.eazegraph.lib.charts.PieChart
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/report_pieChart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"

            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            >

        <TextView
            android:id="@+id/report_TXT_reported"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reported"
            android:textStyle="bold"
            android:textColor="#42B146"
            android:paddingLeft="10dp"/>
        <TextView
            android:id="@+id/report_TXT_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left"
            android:textStyle="bold"
            android:textColor="#585A5C"
            android:paddingLeft="10dp"/>
        <TextView
            android:id="@+id/report_TXT_missing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_report"
            android:textStyle="bold"
            android:textColor="#D30C0C"
            android:paddingLeft="10dp"/>
        <TextView
            android:id="@+id/report_TXT_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days_in_month"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_margin="20dp"
            />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>


</FrameLayout>