<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_margin="20dp"
        >
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="top"
            android:text="@string/login"
            android:textStyle="italic|bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="top">
        <EditText
            android:id="@+id/login_EDT_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:layout_margin="20dp"
            />

        <EditText
            android:id="@+id/login_EDT_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:layout_margin="20dp"
            />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/login_LBL_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_BTN_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:backgroundTint="@color/teal_700"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            android:layout_gravity="end"
            android:layout_margin="20dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_BTN_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:backgroundTint="@color/teal_700"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            android:layout_gravity="end"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>